# python_tk_gtk3_gtk4

./: .gitignore  README.md  pyproject.toml
src/gtk_skin/: __init__.py  demo.py  theme.py  widgets.py
