[project]
name = "python_tk_gtk3_gtk4"
version = "0.1.0"
description = "Tkinter skin that mimics GTK3 (Adwaita) and GTK4 (libadwaita)"
authors = [{name = "Kevin Keller", email = "kellerkev@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/gtk_skin"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11"
tk = "*"

[tool.pixi.pypi-dependencies]
python_tk_gtk3_gtk4 = { path = ".", editable = true }

[tool.pixi.tasks]
demo = "python -m gtk_skin.demo"
demo3 = "python -m gtk_skin.demo --style gtk3"
demo4 = "python -m gtk_skin.demo --style gtk4"
demo-dark = "python -m gtk_skin.demo --style gtk4 --dark"
